# agentic-flow

./: .gitignore  README.md  agentic-flow-1.1.3.tgz
agent-booster/: README.md  package-lock.json  package.json
agentic-flow/: CHANGELOG.md  README.md  add.py  add_numbers.py  agentic-flow-1.0.0.tgz  agentic-flow-1.1.3.tgz  agentic-flow-1.1.4.tgz  app.py  factorial.py  factorial.sh  file.txt  grok-test.txt  llama-cli-test.txt  package-lock.json  package.json  rest_api.py  simple_rest_api.py
agentic-flow/examples/crispr-cas13-pipeline/: Cargo.toml  README.md
agentic-flow/examples/crispr-cas13-pipeline/benches/: alignment_benchmark.rs  api_benchmark.rs  immune_analysis_benchmark.rs  offtarget_prediction_benchmark.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/alignment-engine/src/: bwa.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/alignment-engine/tests/: alignment_test.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/api-service/src/: main.rs  routes.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/api-service/tests/: api_test.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/data-models/src/: lib.rs  metadata.rs  sequencing.rs  targets.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/data-models/tests/: models_test.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/immune-analyzer/src/: deseq.rs  normalization.rs  pathways.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/immune-analyzer/tests/: analysis_test.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/offtarget-predictor/src/: features.rs  ml_model.rs  scoring.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/offtarget-predictor/tests/: prediction_test.rs
agentic-flow/examples/crispr-cas13-pipeline/crates/processing-orchestrator/src/: main.rs
docker/: Dockerfile.test-release
(+64 files in other folders)
